# ft_malloc

./: .gitignore  CMakeLists.txt  README.md  author  evaluation_setup.patch
main/: CMakeLists.txt  create_link.sh
main/include/: block.h  heap.h  malloc.h  malloc_debug.h  utility.h  utility_io.h  utility_memory.h
main/src/: block.c  heap.c  malloc.c  malloc_debug.c  utility_io.c  utility_memory.c
test/: CMakeLists.txt
test/include/: common.h  test_async.h  test_data.h  test_error.h  test_total_allocated_memory.h  test_total_available_memory.h  test_user.h  user_simulator.h
test/src/: main.c  user_simulator.c
